# DSA

./: .gitignore  README.md  Todo.md
algorithms/: CMakeLists.txt  Notes.txt  run.sh
algorithms/algorithm/: CMakeLists.txt  main.cpp
algorithms/gtest/: CMakeLists.txt  test.cpp
algorithms/include/algorithms/: algorithms.hpp  matrix.hpp  maximum_subarray.hpp  sfinae.hpp  sort.hpp
algorithms/src/: CMakeLists.txt  algorithms.cpp  factorial.cpp  maximum_subarray.cpp  sfinae.cpp  sort.cpp
algorithms/test/: CMakeLists.txt  matrix.cpp  maxsubarray.cpp  sort.cpp
algorithms/tests/: CMakeLists.txt  sort.cpp
datastructures/: .gitignore  CMakeLists.txt  Makefile  Todo.txt  run.sh
datastructures/datastructures/: CMakeLists.txt
datastructures/datastructures/heap/: heap.cpp  heap.hpp
datastructures/includes/: is_iterator.hpp
datastructures/includes/heap/: heap.hpp
datastructures/includes/list/: list.hpp
datastructures/src/: catch_heap.cpp  catch_temp.cpp
datastructures/test/: CMakeLists.txt  ValueType.hpp  catch_list.cpp  heap.cpp  valid_rb_test.hpp
datastructures/test/Testing/: missing.cpp
documentation/: red_black_tree.txt
implementations/: Makefile
implementations/includes/: is_iterator.hpp
implementations/includes/Testing/: missing.hpp  testclass.hpp
implementations/includes/list/: list.hpp
implementations/includes/redblack/: redblack.hpp  redblack_iterator.hpp  redblack_node.hpp
implementations/src/: catch_list.cpp  catch_red_black_tree_tests.cpp  catch_temp.cpp
implementations/src/Testing/: iterator_permutations.hpp  list_invariant.hpp  missing.cpp  permutations.hpp
red-black/: Makefile
red-black/includes/: redblack.hpp
red-black/src/: catch_red_black_tree_tests.cpp  valid_rb_test.hpp
